--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
-  --background: #ffffff;
+  --background: #FAF9F6;
   --foreground: #171717;
 }
 
@@ -20,7 +22,10 @@
 }
 
 body {
-  /* background: var(--background);
-  color: var(--foreground); */
   font-family: "Geist Mono", monospace;
+}
+
+pre,
+code {
+  font-family: var(--font-geist-mono);
 }
