--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
-  --background: #FAF9F6;
-  --foreground: #171717;
+  --background: #f5f5f5;
+  --foreground: #1a1a1a;
 }
 
 @theme inline {
@@ -22,6 +22,8 @@
 }
 
 body {
+  background-color: var(--background);
+  color: var(--foreground);
   font-family: "Geist Mono", monospace;
 }
 
